--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,4 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
