ADD: User Account Type

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
+
+.link {
+    @apply text-primary-200;
+}
