FIX: bug on mix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,7 +15,7 @@
 }
 @font-face {
     font-family: "Poppine-semibold";
-    src: url("../fonts/Poppins-Bold.ttf");
+    src: url("../fonts/Poppins-SemiBold.ttf");
 }
 
 .font-poppine-bold{
