--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,9 +2,9 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700;900&display=swap');
 @import './flickity.css';
 
-.link {
+/* .link {
     @apply text-primary-200;
-}
+} */
