upd: added coins logo

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -41,3 +41,24 @@ input[type=range]::-ms-thumb {
     cursor: pointer;
     border-radius: 100%;
 }
+
+.scrollbar::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f7f4ed;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    background: #e0cbcb;
+    border-radius: 100vh;
+    border: 1px solid #f6f7ed;
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #c0a0b9;
+}
+  
